<resources>
    <string name="app_name">BalinaSoft Android Test</string>
    <string name="enter_email">Введите email</string>
    <string name="registration">Регистрация</string>
    <string name="enter_password">Введите пароль</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="server_unavaliable">Server is not available</string>
    <string name="uknown_err">Unknown error</string>
    <string name="first_path_of_validation_err">errorType: Validation error. SubInfo:</string>
    <string name="last_path_validation_err">field: %1$s, message: %2$s</string>
    <string name="validation_error">Validation error</string>

    <array name="email_list">
        <item>gmail.com</item>
        <item>gmail.co.uk</item>
        <item>yandex.ru</item>
        <item>yandex.by</item>
        <item>mail.com</item>
        <item>mail.ru</item>
        <item>yahoo.com</item>
        <item>outlook.com</item>
        <item>tut.by</item>
        <item>flickr.com</item>
        <item>github.com</item>
        <item>icloud.com</item>
    </array>
</resources>
