<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view_model"
            type="com.garr.pavelbobrovko.balinasoftandroidtest.presentation.screen.singup.SignupViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:padding="20dp"
        android:id="@+id/rootLayout">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/nameOfField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail" />

        <AutoCompleteTextView
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect"
            android:text="@={view_model.email}"
            app:adapter="@{view_model.adapter}"
            app:layout_constraintBottom_toTopOf="@+id/glCenterHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/hintOfField" />

        <TextView
            android:id="@+id/tvPassword"
            style="@style/nameOfField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/glCenterHorizontal" />

        <android.support.design.widget.TextInputLayout
            style="@style/hintOfField"
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:passwordToggleDrawable="@drawable/ic_view"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/hintOfField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="500"
                android:text="@={view_model.pass}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.Guideline
            android:id="@+id/glCenterHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <Button
            style="@style/registryButtonStyle"
            android:id="@+id/btnRegistry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:onClick="@{(v) -> view_model.signUpClick()}"
            android:text="@string/registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    </android.support.constraint.ConstraintLayout>

</layout>